--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,23 +1,34 @@
-<!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="stylesheets/main.css"/>
-  <script src="/js/main.js"></script>
+  <% include ../partials/header %>
 </head>
+<body class="container">
 
-<body>
+  <header>
+    <% include ../partials/nav %>
+  </header>
 
-  <h1>L • A • U • R • A</h1>
+  <main>
+    <div class="jumbotron">
+      <h1>Laura Romero</h1>
+      <p>CS and Cognitive Psych | NEU 2019</p>
+    </div>
+    <div class="content">
+      <p>
+        Words about me :~)
+      </p>
+      <p>
+        Some <strong>more</strong> words about me :~)</p>
+      <p>
+        <br>
+        Even More Words :O
+      </p>
+    </div>
+  </main>
 
-  <p id="demo">
-    This is me testing out a lil html file
-  </p>
-
-  <button type="button" onclick="myFunction()">
-    Try it
-  </button>
+  <footer>
+    <% include ../partials/footer %>
+  </footer>
 
 </body>
-
 </html>
